changes request completed

--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 <body>
     <h1>Accenture</h1>
     <ul>
-        <li>Java</li>
-        <li>Oracle</li>
-        <li>Spring</li>
+        <li>java</li>
+        <li>oracle</li>
+        <li>springs</li>
+        <li>hibernate</li>
+        <li>jspServlet</li>
     </ul>
 </body>
 </html>
