--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Accenture</h1>
+    <h1>Accenture - New Applied. Now</h1>
     <ul>
         <li>Java</li>
         <li>Oracle</li>
-        <li>Spring</li>
+        <li>Springs</li>
+        <li>Hibernate</li>
+        <li>JspServlet</li>
     </ul>
 </body>
 </html>
