--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <li>oracle</li>
         <li>springs</li>
         <li>hibernate</li>
-        <li>jspServlet</li>
+        <li>jspservlet</li>
     </ul>
 </body>
 </html>
